# Lab7

./: .gitignore  CMakeLists.txt
include/: MainFuncs.h  Task_1.h  Task_2.h  Task_3.h  Task_4.h  Task_5.h
scripts/: build.sh
src/: MainFuncs.cpp  main.cpp
src/Task_1/: Task_1.cpp
src/Task_2/: Task_2.cpp
src/Task_3/: Task_3.cpp
src/Task_4/: Task_4.cpp
src/Task_5/: Task_5.cpp
